# rustyreminder

./: .gitignore  Cargo.toml  README.md
src/: config.rs  email.rs  errors.rs  excel.rs  main.rs
