[package]
name = "rustyreminder"
version = "0.1.0"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"

[dependencies]
calamine = "0.15"
chrono = "0.4"
colored = "1.8"
config = { version= "0.9", features = ['ini'] }
failure = "0.1"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
time = "0.1"